Add fix for email-service